tests/fixtures/syntax/valid/logical_not_block.repor
case "logical not block" {
  $ false
  assert {
    not {
      exit 0
    }
  }
}
