tests/fixtures/syntax/invalid/step_outside_case_block.repor
case "valid case" {
  $ true
  assert { exit 0 }
}

  $ false
